Bug 271215 - Custom colors are not applied.
Summary: Custom colors are not applied.
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-18 14:07 UTC by Christophe Marin
Modified: 2011-04-22 07:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-04-18 14:07:12 UTC
Using master,

KMail2 / settings / appearance / Colors
Enable 'Use custom colors', change eg the quoted text or the links color, apply.

Nothing happens in KMail, the default color is still used.
Comment 1 Torgny Nyblom 2011-04-22 07:50:52 UTC
Git commit 41f3343b56089f6f8b00ae016f265791f9521832 by Torgny Nyblom.
Committed on 22/04/2011 at 07:54.
Pushed by tnyblom into branch 'master'.

Obey user defined quote colors

BUG: 271215

M  +10   -3    messageviewer/csshelperbase.cpp     

http://commits.kde.org/kdepim/41f3343b56089f6f8b00ae016f265791f9521832