Obey user defined quote colors

BUG: 271215